--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 <body>
 	<header>
 
-		<img>
+		<img src="leitura.png" alt="logo da ERICA">
+		<ul> 
+			<li> <a href="##">Home</a></li>
+			<li> <a href="##">Principal</a></li>
+			<li> <a href="##">Contato</a></li>
+
+		</ul>
 
 	</header>
 	<main>
